Asymmetric position vertices in circles primitives. Non-symmetrical edges in circles #87779

Closed
opened 2021-04-24 12:42:47 +02:00 by Vladimir · 10 comments

System Information
Operating system: Linux-5.11.16-2-MANJARO-x86_64-with-glibc2.33 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 4600 (HSW GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 21.0.3

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-23 20:24, hash: aa95f8019e
Worked: (newest version of Blender that worked as expected)

Short description of error
Operation which creation of circles such as Add->Mesh->Circle, Add->Mesh->Cylinder after applying have asymmetric position of vertices, which can give unexpected results such as Boolean operation with the selected Exact method.

I created two circles - A and B. Circle A was created from menu Add->Mesh->Circle with radius equals 50 mm. You can see on image that parallel vertices top and bottom has asymmetric position. Also, the asymmetric arrangement of the vertices gives different lengths between the parallel vertices, which indicates that the circle has non-symmetrical edges. It shown on next image.

Additionally, for comparison I created second circle B from one quarter of circle and mirrored by X and Y axes for symmetric. Circle B has symmetric position of vertices and also symmetric edges and correct radius.

Screenshot_20210424_125914.png
precission.blend

This issue can affect in boolean operations with Exact option and give unexpected result when parts of meshes arrange symmetric, for example:

Screenshot_20210424_131520.png
Screenshot_20210424_131612.png
exact-boolean.blend

Also I added to the file object created from correct circle primitives and I got expected result of Boolean operation:

Screenshot_20210424_165645.png

However, I noticed that the inaccuracy can see when use the millimeters system of measurement. If you switch to another system, asymmetric values you don't see but the issue will remain. What units use for calculates inside Blender?

Exact steps for others to reproduce the error

**System Information** Operating system: Linux-5.11.16-2-MANJARO-x86_64-with-glibc2.33 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 4600 (HSW GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 21.0.3 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-23 20:24, hash: `aa95f8019e` Worked: (newest version of Blender that worked as expected) **Short description of error** Operation which creation of circles such as `Add->Mesh->Circle`, `Add->Mesh->Cylinder` after applying have asymmetric position of vertices, which can give unexpected results such as Boolean operation with the selected Exact method. I created two circles - `A` and `B`. Circle `A` was created from menu `Add->Mesh->Circle` with radius equals 50 mm. You can see on image that parallel vertices top and bottom has asymmetric position. Also, the asymmetric arrangement of the vertices gives different lengths between the parallel vertices, which indicates that the circle has non-symmetrical edges. It shown on next image. Additionally, for comparison I created second circle `B` from one quarter of circle and mirrored by `X` and `Y` axes for symmetric. Circle `B` has symmetric position of vertices and also symmetric edges and correct radius. ![Screenshot_20210424_125914.png](https://archive.blender.org/developer/F10035319/Screenshot_20210424_125914.png) [precission.blend](https://archive.blender.org/developer/F10035322/precission.blend) This issue can affect in boolean operations with Exact option and give unexpected result when parts of meshes arrange symmetric, for example: ![Screenshot_20210424_131520.png](https://archive.blender.org/developer/F10035324/Screenshot_20210424_131520.png) ![Screenshot_20210424_131612.png](https://archive.blender.org/developer/F10035326/Screenshot_20210424_131612.png) [exact-boolean.blend](https://archive.blender.org/developer/F10035491/exact-boolean.blend) Also I added to the file object created from correct circle primitives and I got expected result of Boolean operation: ![Screenshot_20210424_165645.png](https://archive.blender.org/developer/F10035494/Screenshot_20210424_165645.png) However, I noticed that the inaccuracy can see when use the millimeters system of measurement. If you switch to another system, asymmetric values you don't see but the issue will remain. What units use for calculates inside Blender? **Exact steps for others to reproduce the error**
Author

Added subscriber: @Wovchick

Added subscriber: @Wovchick

#87937 was marked as duplicate of this issue

#87937 was marked as duplicate of this issue
Vladimir changed title from Asymmetric position vertices in circles. Non-symmetrical edges in circles to Asymmetric position vertices when created primitives of circles. Non-symmetrical edges in circles 2021-04-24 13:33:05 +02:00
Vladimir changed title from Asymmetric position vertices when created primitives of circles. Non-symmetrical edges in circles to Asymmetric position vertices in primitives of circles. Non-symmetrical edges in circles 2021-04-24 13:35:13 +02:00
Vladimir changed title from Asymmetric position vertices in primitives of circles. Non-symmetrical edges in circles to Asymmetric position vertices in circles primitives. Non-symmetrical edges in circles 2021-04-24 16:04:44 +02:00

This issue was referenced by 5946352ae2

This issue was referenced by 5946352ae2cd3ef14d8af07f8d4bd047954b9fd1

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2021-04-29 16:25:55 +02:00
Author

Hello!

I checked resolve of issue and now this issue very well resolved with horizontal symmetric vertices of circle, they have now symmetric position of vertices but... sides of vertical vertices, left and right sides remained have difference. Edges left and right have different length because vertices don't is symmetric. See the third circle in the picture.

Screenshot_20210430_082632.png
precision-circle.blend

It can be fixed? Thank You!

Hello! I checked resolve of issue and now this issue very well resolved with horizontal symmetric vertices of circle, they have now symmetric position of vertices but... sides of vertical vertices, left and right sides remained have difference. Edges left and right have different length because vertices don't is symmetric. See the third circle in the picture. ![Screenshot_20210430_082632.png](https://archive.blender.org/developer/F10046462/Screenshot_20210430_082632.png) [precision-circle.blend](https://archive.blender.org/developer/F10046464/precision-circle.blend) It can be fixed? Thank You!
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author

While this issue resolving developers, I created add-on which creating symmetric circle. If anybody interested it than you can download and install its from https://github.com/microcoder/SymmetricPrimitives

While this issue resolving developers, I created add-on which creating symmetric circle. If anybody interested it than you can download and install its from https://github.com/microcoder/SymmetricPrimitives

This issue was referenced by 087f27a52f

This issue was referenced by 087f27a52f7857887e90754d87a7a73715ebc3fb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87779
No description provided.