Fix T87779: Asymmetric vertex positions in circles primitives

Add sin_cos_from_fraction which ensures each quadrant has matching
values when their sign is flipped.